fix: layout issues in ie

--- a/src/applications/content-playlists-app/playlist/playlist-content/bulk-operations/bulk-operations.component.scss
+++ b/src/applications/content-playlists-app/playlist/playlist-content/bulk-operations/bulk-operations.component.scss
@@ -10,6 +10,11 @@
   display: flex;
   justify-content: space-between;
 
+  .kBulkActionsContainer {
+    display: inline-flex;
+    align-items: center;
+  }
+
   .kPlaylistEntriesTableDuration {
     margin-right: 14px;
   }
