--- a/src/applications/content-playlists-app/playlist/playlist-content/playlist-content.component.scss
+++ b/src/applications/content-playlists-app/playlist/playlist-content/playlist-content.component.scss
@@ -1,6 +1,7 @@
 @import 'app-theme/_variables.scss';
 
 .kPlaylistEntriesHolder {
+  width: 100%;
   height: 100%;
   border: 1px solid $kGrayscale6;
   position: relative;
